--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ serde = { version = "1", features = ["derive"] }
 serde_derive = "1.0"
 validator = { version = "0.12", features = ["derive"] }
 chrono = { version = "0.4", features = ["serde"] }
+redis = "0.23.2"
+serde_json = "1"
+deadpool-redis = "0.12.0"
