--- a/nginx.conf
+++ b/nginx.conf
@@ -12,5 +12,8 @@ http {
             proxy_pass http://api;
         }
         access_log  off;
+        proxy_read_timeout 300;
+        proxy_connect_timeout 300;
+        proxy_send_timeout 300;
     }
 }
